# DH2323_project

./: CMakeCache.txt  CMakeLists.txt  Makefile  OBJ_Loader.h  Project  README.md  TestModel.h  cmake_install.cmake  skeleton.cpp
ImageMagick-7.0.10-13/: ImageMagick.spec  Makefile  common.shi  config.status  configure  libtool  magick.sh
ImageMagick-7.0.10-13/Magick++/lib/: libMagick++-7.Q16HDRI.la
ImageMagick-7.0.10-13/MagickCore/: ImageMagick-7.Q16HDRI.pc  MagickCore-7.Q16HDRI.pc  libMagickCore-7.Q16HDRI.la  magick-baseconfig.h  version.h
ImageMagick-7.0.10-13/MagickCore/.deps/: libMagickCore_7_Q16HDRI_la-annotate.Plo  libMagickCore_7_Q16HDRI_la-coder.Plo  libMagickCore_7_Q16HDRI_la-list.Plo  libMagickCore_7_Q16HDRI_la-magic.Plo  libMagickCore_7_Q16HDRI_la-static.Plo  libMagickCore_7_Q16HDRI_la-type.Plo  libMagickCore_7_Q16HDRI_la-xwindow.Plo
ImageMagick-7.0.10-13/MagickCore/.libs/: libMagickCore-7.Q16HDRI.lai
ImageMagick-7.0.10-13/MagickWand/: MagickWand.pc  libMagickWand-7.Q16HDRI.la
ImageMagick-7.0.10-13/MagickWand/.libs/: libMagickWand-7.Q16HDRI.lai
ImageMagick-7.0.10-13/PerlMagick/: Makefile.PL
ImageMagick-7.0.10-13/PerlMagick/default/: Makefile.PL
ImageMagick-7.0.10-13/PerlMagick/quantum/: Makefile.PL
ImageMagick-7.0.10-13/coders/.deps/: MagickCore_libMagickCore_7_Q16HDRI_la-png.Plo  MagickCore_libMagickCore_7_Q16HDRI_la-ttf.Plo
ImageMagick-7.0.10-13/config/: ImageMagick.rdf  config.h  configure.xml  configure.xml.in
ImageMagick-7.0.10-13/utilities/: magick
OBJ-Loader-master/: e1Out.txt  e1_loadandprint.cpp  hello
(+2 files in other folders)
